--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-electron",
-  "version": "4.2.0",
-  "description": "Angular 6 with Electron (Typescript + SASS + Hot Reload)",
+  "name": "PhotoChooser",
+  "version": "1.0.2",
+  "description": "PhotoChooser v1.0",
   "homepage": "https://github.com/maximegris/angular-electron",
   "author": {
     "name": "Maxime GRIS",
@@ -30,14 +30,24 @@
     "electron:tsc": "tsc",
     "electron:serve-tsc": "tsc -p tsconfig-serve.json",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:serve-tsc && electron . --serve",
-    "electron:local": "npm run build:prod && electron .",
+    "electron:local": "npm run build:prod && cp -r /Users/mskalski/dev/my_projects/js/angular6/angular-electron/node_modules/exiftool-vendored/node_modules/exiftool-vendored.pl/* dist/ && electron .",
     "electron:linux": "npm run build:prod && npx electron-builder build --linux",
     "electron:windows": "npm run build:prod && npx electron-builder build --windows",
-    "electron:mac": "npm run build:prod && npx electron-builder build --mac",
+    "electron:mac": "npm run build:prod && cp -r /Users/mskalski/dev/my_projects/js/angular6/angular-electron/node_modules/exiftool-vendored/node_modules/exiftool-vendored.pl/* dist/ && npx electron-builder build --mac",
     "test": "npm run postinstall:web && ng test",
     "e2e": "npm run postinstall:web && ng e2e"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@ng-bootstrap/ng-bootstrap": "^3.2.2",
+    "angular-tree-component": "^8.0.0",
+    "bootstrap": "^4.1.3",
+    "electron-json-storage": "^4.1.2",
+    "electron-localshortcut": "^3.1.0",
+    "exiftool-vendored": "^6.2.3",
+    "fs-extra": "^7.0.0",
+    "rxjs": "6.2.2",
+    "winattr": "^2.0.0"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.3",
     "@angular/cli": "6.1.2",
@@ -71,10 +81,9 @@
     "npm-run-all": "4.1.3",
     "npx": "10.2.0",
     "protractor": "5.3.2",
-    "rxjs": "6.2.2",
     "ts-node": "6.0.3",
     "tslint": "5.10.0",
-    "typescript": "2.7.2",
+    "typescript": "2.8.3",
     "wait-on": "2.1.0",
     "webdriver-manager": "12.0.6",
     "zone.js": "0.8.26"
