--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "electron:tsc": "tsc",
     "electron:serve-tsc": "tsc -p tsconfig-serve.json",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:serve-tsc && electron . --serve",
-    "electron:local": "npm run build:prod && cp -r /Users/mskalski/dev/my_projects/js/angular6/angular-electron/node_modules/exiftool-vendored/node_modules/exiftool-vendored.pl/* dist/ && electron .",
+    "electron:local": "npm run build:prod && electron .",
     "electron:linux": "npm run build:prod && npx electron-builder build --linux",
     "electron:windows": "npm run build:prod && npx electron-builder build --windows",
-    "electron:mac": "npm run build:prod && cp -r /Users/mskalski/dev/my_projects/js/angular6/angular-electron/node_modules/exiftool-vendored/node_modules/exiftool-vendored.pl/* dist/ && npx electron-builder build --mac",
+    "electron:mac": "npm run build:prod && npx electron-builder build --mac",
     "test": "npm run postinstall:web && ng test",
     "e2e": "npm run postinstall:web && ng e2e"
   },
