--- a/package.json
+++ b/package.json
@@ -38,15 +38,16 @@
     "e2e": "npm run postinstall:web && ng e2e"
   },
   "dependencies": {
+    "@angular/animations": "6.1.2",
+    "@angular/cdk": "^6.4.7",
+    "@angular/material": "^6.4.7",
     "@ng-bootstrap/ng-bootstrap": "^3.2.2",
     "angular-tree-component": "^8.0.0",
     "bootstrap": "^4.1.3",
     "electron-json-storage": "^4.1.2",
     "electron-localshortcut": "^3.1.0",
-    "exiftool-vendored": "^6.2.3",
     "fs-extra": "^7.0.0",
-    "rxjs": "6.2.2",
-    "winattr": "^2.0.0"
+    "rxjs": "6.2.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.3",
@@ -73,14 +74,14 @@
     "electron-reload": "1.2.2",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.2",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.0",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.1.0",
     "npm-run-all": "4.1.3",
     "npx": "10.2.0",
-    "protractor": "5.3.2",
+    "protractor": "^5.4.1",
     "ts-node": "6.0.3",
     "tslint": "5.10.0",
     "typescript": "2.8.3",
